--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "be-nc-news",
   "version": "1.0.0",
   "description": "bc-nc-news",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
-    "test": "jest"
+    "test": "jest",
+    "dev": "nodemon npm run main"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "jest": "^27.0.4",
+    "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
   },
   "dependencies": {
