--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "jest": "^27.0.4",
+    "jest-sorted": "^1.0.12",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
   },
