--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
+    "seed-prod": "NODE_ENV=production npm run seed",
     "test": "jest",
-    "dev": "nodemon npm run main"
+    "dev": "nodemon npm run main",
+    "start": "node listen.js"
   },
   "repository": {
     "type": "git",
